# qt-widgeteer

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  QTAGENT_PLAN.md  README.md
.github/workflows/: ci.yml
docs/: architecture.md  llm_user_manual.md  protocol.md  user-manual.md
docs/plans/: 2026-01-15-websocket-refactor-design.md  widgeteer-bot-implementation.md
include/widgeteer/: ActionRecorder.h  CommandExecutor.h  ElementFinder.h  EventBroadcaster.h  EventInjector.h  Export.h  Protocol.h  Result.h  Server.h  Synchronizer.h  UIIntrospector.h  WidgeteerBot.h  WidgeteerClient.h
sample/: CMakeLists.txt  main.cpp
scripts/: coverage.sh
src/: ActionRecorder.cpp  CommandExecutor.cpp  ElementFinder.cpp  EventBroadcaster.cpp  EventInjector.cpp  Protocol.cpp  Server.cpp  Synchronizer.cpp  UIIntrospector.cpp  WidgeteerBot.cpp  WidgeteerClient.cpp
tests/: sample_tests.json  test_executor.py  widgeteer_client.py
tests/cpp/: CMakeLists.txt  test_action_recorder.cpp  test_command_executor.cpp  test_element_finder.cpp  test_event_broadcaster.cpp  test_event_injector.cpp  test_protocol.cpp  test_server.cpp  test_synchronizer.cpp  test_ui_introspector.cpp  test_widgeteer_bot.cpp  test_widgeteer_client.cpp
tools/: widgeteer
